--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/nodemailer": "^6.4.15",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.16",
     "apitoolz": "^0.3.27",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -23,6 +25,8 @@
     "mongoose": "^8.4.5",
     "nanoid": "^5.0.7",
     "nodemailer": "^6.9.14",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pino": "^9.2.0",
     "pino-pretty": "^11.2.1",
     "zod": "^3.23.8"
