--- a/package.json
+++ b/package.json
@@ -39,11 +39,16 @@
     "@types/config": "^3.3.4",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.6",
     "@types/nanoid": "^3.0.0",
     "@types/node": "^20.14.10",
     "@types/pino": "^7.0.5",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.3"
   }
