--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "passport-google-oauth20": "^2.0.0",
     "pino": "^9.2.0",
     "pino-pretty": "^11.2.1",
+    "tesseract.js": "^5.1.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
