--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "build": "tsc",
+    "start": "npm run build && node build/index.js",
+    "watch": "tsc --watch"
+
   },
   "keywords": [],
   "author": "",
