--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "test": "jest --watch",
     "build": "tsc",
-    "start": "node --max-old-space-size=1024 build/index.js",
+    "start": "npm run build && node --max-old-space-size=1024 build/index.js",
     "watch": "tsc --watch"
 
   },
