--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdfkit": "^0.15.0",
     "pino": "^9.2.0",
     "pino-pretty": "^11.2.1",
     "tesseract.js": "^5.1.1",
@@ -55,6 +56,7 @@
     "@types/lodash": "^4.17.6",
     "@types/nanoid": "^3.0.0",
     "@types/node": "^20.14.10",
+    "@types/pdfkit": "^0.13.5",
     "@types/pino": "^7.0.5",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
